API: Update permission handlin
* Use global permissions from global stream
* Add global.intent.list to swaggerfile
* Update provisioning with permission bootstraping
